--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -7,12 +7,36 @@ pipeline {
         PYTHONPATH = "${env.WORKSPACE}"
         DOCKER_TAG = "${env.BUILD_NUMBER}"
         DOCKER_REPO_NAME = "devopsmichaelrosenbaum"
-        DOCKER_IMAGE_NAME = "projectdevops"
+        DOCKER_IMAGE_NAME_CONSUMER = "consumer"
+        DOCKER_IMAGE_NAME_PRODUCER = "producer"
     }
     stages {
         stage('checkout') {
             steps {
                 git branch: 'master', url: 'https://github.com/devopsMR/k8s-project.git'
+            }
+        }
+        stage('build and push image') {
+            steps {
+                script {
+                    try {
+                        withCredentials([usernamePassword(credentialsId: 'dockerhub', passwordVariable: 'DOCKER_HUB_PASSWORD', usernameVariable: 'DOCKER_HUB_USERNAME')]) {
+                            // Build, tag, and push Docker image
+                            def dockerfilePath = 'k8s-project/bundle/producer'
+                            sh "docker build -t ${DOCKER_IMAGE_NAME_PRODUCER}:${DOCKER_TAG} ."
+                            def dockerfilePath = 'k8s-project/bundle/consumer'
+                            sh "docker build -t ${DOCKER_IMAGE_NAME_CONSUMER}:${DOCKER_TAG} ."
+                            sh "docker tag ${DOCKER_IMAGE_NAME_PRODUCER}:${DOCKER_TAG} ${DOCKER_REPO_NAME}/${DOCKER_IMAGE_NAME_PRODUCER}:${DOCKER_TAG}"
+                            sh "docker tag ${DOCKER_IMAGE_NAME_CONSUMER}:${DOCKER_TAG} ${DOCKER_REPO_NAME}/${DOCKER_IMAGE_NAME_CONSUMER}:${DOCKER_TAG}"
+                            sh "docker login -u ${DOCKER_HUB_USERNAME} -p ${DOCKER_HUB_PASSWORD}"
+                            sh "docker push ${DOCKER_REPO_NAME}/${DOCKER_IMAGE_NAME_PRODUCER}:${DOCKER_TAG}"
+                            sh "docker push ${DOCKER_REPO_NAME}/${DOCKER_IMAGE_NAME_CONSUMER}:${DOCKER_TAG}"
+                        }
+                    } catch (Exception e) {
+                        echo "An error occurred while building, pushing, or verifying the Docker image: ${e.message}"
+                        error("Stopping pipeline due to failure during 'build and push image' stage.")
+                    }
+                }
             }
         }
     }
