--- a/Jenkins/Jenkinsfile
+++ b/Jenkins/Jenkinsfile
@@ -56,7 +56,7 @@ pipeline {
                 // Remove local images created during the pipeline
                 echo "CI stage clean up - remove Docker images."
                 sh "docker rmi -f ${DOCKER_IMAGE_NAME_PRODUCER}:${DOCKER_TAG}"
-                sh "docker rmi -f ${DOCKER_IMAGE_NAME_CONSUMER}:${DOCKER_TAG}'"
+                sh "docker rmi -f ${DOCKER_IMAGE_NAME_CONSUMER}:${DOCKER_TAG}"
                 sh "docker rmi -f ${DOCKER_REPO_NAME}/${DOCKER_IMAGE_NAME_PRODUCER}:${DOCKER_TAG}"
                 sh "docker rmi -f ${DOCKER_REPO_NAME}/${DOCKER_IMAGE_NAME_CONSUMER}:${DOCKER_TAG}"
             }
