--- a/ci-cd/ci/Jenkinsfile
+++ b/ci-cd/ci/Jenkinsfile
@@ -71,7 +71,7 @@ pipeline {
         failure {
             script {
                 // Add actions you want upon job failure, like:
-                echo "Build failed! Please check the logs for more details."
+                echo "Continuous Integration Pipeline failed! Please check the logs for more details."
             }
         }
     }
